syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

message RolePermissions {
  repeated string permissions = 1;
}
